--- a/sites/schastye/index.html
+++ b/sites/schastye/index.html
@@ -7,10 +7,12 @@
   </head>
   <body>
     <article>
+
         <p class="small">The Vine<i> Creative agency</i><br>
         Наб. реки Мойки, 60В <br>
         Санкт-Петербург, 190000 <br>
         Россия</p>
+        <a class="pure" href="img/kom-pred-the-vine.pdf" download="КП" target="_blank"><img src="img/download.svg" width="24px"> Скачать предложение (≈1 mb, pdf)</a>
         <br><br>
         <h2>Коммерческое предложение</h2>
         <p class="subtitle">Дизайн и разработка сайта для «Счастье»</p>
