--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
 
         <h3>КП</h3>
         <p>Для счастья<a href="http://paperdavid.github.io/sites/schastye" target="_blank">&#128279;</a></p>
+
+        <h3>Vita Stretta</h3>
+        <p>Прототипы<a href="http://paperdavid.github.io/sites/vita" target="_blank">&#128279;</a></p>
+
+
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages</small></p>
