--- a/sites/vita/index.html
+++ b/sites/vita/index.html
@@ -29,7 +29,7 @@
 
 
 
-        <a class="pure" href="img/kom-pred-the-vine.pdf" download="КП" target="_blank"><img src="img/download.svg" width="24px"> Скачать прототипы (≈2 mb, pdf)</a>
+        <a class="pure" href="img/archive.zip" download="КП" target="_blank"><img src="img/download.svg" width="24px"> Скачать прототипы (≈2 mb, pdf)</a>
         <br><br>
         <h2>Проект The Vine</h2>
         <p class="subtitle">Прототипы шаблонных страниц сайта для <br>«Vita Stretta»</p>
