--- a/sites/vita/index.html
+++ b/sites/vita/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <article>
+      <div id="top"></div>
 
       <div class="nav">
         <ul>
@@ -22,6 +23,7 @@
               <li><a href="#cart">Карточка товара</a></li>
             </ul>
           </li>
+          <li><a href="#top">Наверх</a></li>
         </ul>
       </div>
 
@@ -41,11 +43,12 @@
           <h2>Дизайн</h2>
           <p>
             <ul>
-              <li>десктопная версия</li>
-              <li>мобильная версия</li>
-              <li>уникальная концепция сайта</li>
-              <li>интерфейс</li>
-              <li>графический материал для сайта</li>
+              <li>Эффекты для главной <a href="http://tympanus.net/Development/ImageTiltEffect/" target="_blank">&#128279;</a></li>
+              <li>Фильтр каталога <a href="http://tympanus.net/Blueprints/FilterableProductGrid/" target="_blank">&#128279;</a></li>
+              <li>Типографика <a href="http://www.stockholmdesignlab.se" target="_blank">&#128279;</a></li>
+              <li>Интерфейс <a href="http://service.ikea.ru" target="_blank">&#128279;</a></li>
+              <li>Фото материалы <a href="https://overclothing.com" target="_blank">&#128279;</a></li>
+              <li>Галерея <a href="http://chocolat.insipi.de/#demo" target="_blank">&#128279;</a></li>
             </ul>
           </p>
         </section>
@@ -60,9 +63,13 @@
           <div id="main"></div>
           <h3>Главная</h3>
           <p>
-          Комментарий к странице Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ipsum eos earum, dicta delectus dolores dignissimos? Perferendis vitae, necessitatibus impedit officiis iste dolorem est nobis, autem ea sapiente dolorum! Distinctio numquam rem magni provident unde enim tempore voluptas cumque quisquam sed obcaecati et, atque accusamus. Soluta eum laboriosam ipsa natus.
-            <img src="img/main.jpg" width="100%" alt="">
+            <ul>
+              <li>Розница & Опт. Заголовки будут являться ссылка. При нажатии на "Розница" пользователь попадает на страницу со списком магазинов. Это решения было принято исходят из того, что пользователю не заинтересованному в приобретении оптом вероятнее всего необходимо узнать где конкретно он может приобрести одежду бренда Vita Stretta.</li>
+              <li>Горячее предложение. На главной странице будет распологать 8 горячих предложений или одежда из новых коллекций. Пользователь не переходя по ссылка сможет сразу ознакомиться с одеждой бренда Vita Stretta.</li>
+              <li>Стилизованная карта. Интерактивная карта России (СПб), конторой будет точками указанны города, где распологаются магазин с одеждой бренда Vita Stretta.</li>
+            </ul>
           </p>
+          <p><img src="img/main.jpg" width="100%" alt=""></p>
         </section>
 
 
@@ -73,7 +80,7 @@
           <div id="about"></div>
           <h3>О компании</h3>
           <p>
-          Комментарий к странице Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ipsum eos earum, dicta delectus dolores dignissimos? Perferendis vitae, necessitatibus impedit officiis iste dolorem est nobis, autem ea sapiente dolorum! Distinctio numquam rem magni provident unde enim tempore voluptas cumque quisquam sed obcaecati et, atque accusamus. Soluta eum laboriosam ipsa natus.
+          На странице "О компании" пользователь сможет ознакомиться с историей создания бренда, где базируется производство, головной офис и другая информация. Основной фишкой данной страницы будет являтся анимированное изображение генерального директора копании с его обращение к пользователю.
             <img src="img/about.jpg" width="100%" alt="">
           </p>
         </section>
@@ -85,7 +92,7 @@
           <div id="catalogue"></div>
           <h3>Каталог</h3>
           <p>
-          Комментарий к странице Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ipsum eos earum, dicta delectus dolores dignissimos? Perferendis vitae, necessitatibus impedit officiis iste dolorem est nobis, autem ea sapiente dolorum! Distinctio numquam rem magni provident unde enim tempore voluptas cumque quisquam sed obcaecati et, atque accusamus. Soluta eum laboriosam ipsa natus.
+          Данная страница разрабатывалась с учетом современных трендов и результатов тестирования в области юзабилити ведущих европейских диджитал агенств. Переходя на эту страницу пользователь сразу получет всю необходимую первичную информацию о товаре, а именно большую фотографию, название и артикул. Также пользователю будет доступен фильт по которым он сможет сортировать товары по категория (категории будут согласованны с заказчиком).
             <img src="img/catalog.jpg" width="100%" alt="">
           </p>
         </section>
@@ -97,7 +104,7 @@
           <div id="news"></div>
           <h3>Новости</h3>
           <p>
-          Комментарий к странице Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ipsum eos earum, dicta delectus dolores dignissimos? Perferendis vitae, necessitatibus impedit officiis iste dolorem est nobis, autem ea sapiente dolorum! Distinctio numquam rem magni provident unde enim tempore voluptas cumque quisquam sed obcaecati et, atque accusamus. Soluta eum laboriosam ipsa natus.
+          Блок новостей представляет из себя ленту с возможностю размещения информации как с фотографиями, там сплошным текстом. Было принято решение не выделять под каждую новость отдельную страницу, что обусловленно правилами seo продвижения. 
             <img src="img/news.jpg" width="100%" alt="">
           </p>
         </section>
@@ -110,7 +117,7 @@
           <div id="shops"></div>
           <h3>Магазины</h3>
           <p>
-          Комментарий к странице Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ipsum eos earum, dicta delectus dolores dignissimos? Perferendis vitae, necessitatibus impedit officiis iste dolorem est nobis, autem ea sapiente dolorum! Distinctio numquam rem magni provident unde enim tempore voluptas cumque quisquam sed obcaecati et, atque accusamus. Soluta eum laboriosam ipsa natus.
+          Список магазинов разделен по блокам с названиями городов и основной информацией магазинов, где представлена одежда бренда Vita Stretta.
             <img src="img/shop-list.jpg" width="100%" alt="">
           </p>
         </section>
@@ -123,7 +130,7 @@
         <div id="contacts"></div>
           <h3>Контакты</h3>
           <p>
-          Комментарий к странице Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ipsum eos earum, dicta delectus dolores dignissimos? Perferendis vitae, necessitatibus impedit officiis iste dolorem est nobis, autem ea sapiente dolorum! Distinctio numquam rem magni provident unde enim tempore voluptas cumque quisquam sed obcaecati et, atque accusamus. Soluta eum laboriosam ipsa natus.
+          В раздел с контактами вынесенно 3 основных информационных блока, 2 из которых будут отвечать на основные вопросы оптовых покупателей. Если польователь не найдет ответ а свой вотрос, он сможет задать его или сделать запрос на отправку каталога. Это сделанно для того, что заказчим мог собирать свою базу телефонов и емейлов для дальнейшего использования. 
             <img src="img/contact.jpg" width="100%" alt="">
           </p>
         </section>
@@ -137,7 +144,7 @@
           <div id="cart"></div>
           <h3>Карточка товара</h3>
           <p>
-          Комментарий к странице Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ipsum eos earum, dicta delectus dolores dignissimos? Perferendis vitae, necessitatibus impedit officiis iste dolorem est nobis, autem ea sapiente dolorum! Distinctio numquam rem magni provident unde enim tempore voluptas cumque quisquam sed obcaecati et, atque accusamus. Soluta eum laboriosam ipsa natus.
+          Блок карточки товара представляет собой разделенной страницу на 2 части. В Правой части пользователь может подробно рассмотреть товар, а в левой ознакомиться с подробной информацией об этом товаре. Ниже будут размещены фотографии с деталями товара.
             <img src="img/product-cart.jpg" width="100%" alt="">
           </p>
         </section>
