--- a/sites/toptop/index.html
+++ b/sites/toptop/index.html
@@ -53,15 +53,13 @@
             <ul>
               <li><a href="http://cpeople.ru" target="_blank">Full page</a></li>
               <li><a href="https://onedesigncompany.com" target="_blank">Motion graphic</a></li>
-              <li><a href="" target="_blank">Text</a></li>
             </ul>
         </section>
 
         <section>
           <h2>Карточка товара:</h2>
             <ul>
-              <li><a href="http://www.v76.com/hair-care/energizing-shampoo.html" target="_blank">ссылка</a></li>
-              <li><a href="<a href="http://www.v76.com/hair-care/energizing-shampoo.html" target="_blank">ссылка</a>" target="_blank">Отзывы и комментарии</a></li>
+              <li><a href="http://www.v76.com/hair-care/energizing-shampoo.html" target="_blank">Отзывы и комментарии</a></li>
               <li><a href="https://aarkcollective.com/products/shell-brown" target="_blank">Info</a></li>
               <li><a href="https://edwin-europe.com/product/Super-Skinny-Pant-Power-Stretch-Blue-Denim-Soft-Wash" target="_blank">Zoom</a></li>
             </ul>
