--- a/sites/azbuka/index.html
+++ b/sites/azbuka/index.html
@@ -53,16 +53,27 @@
           <img src="img/5.png" width="1000">
         </section>
 
-
         <section>
           <h2>Инструкции «Gruzer»</h2>
           Логотип Gruzer не использовал
           <hr>
-          <p>Внешний вид</p>
-          <img src="img/6.png" width="500">
+          <h3>Внешний вид:</h3>
+          <p>— Изменил систему складывания инструкции. Сделал ее по методам оригами, теперь она легче складывается и наоборот.</p>
+          <p>— Внешние картонки имеют размер пластиковой карты 54х86мм (по ISO 7810)</p>
+          <p>— Внутренняя страница А4, которая делится на 16 прямоугольных частей 50х73мм.</p>
+          <p>— Использовал официальные бэджи App Store и Play Market</p>
+          <p>— Создал паттерн, состоящий из пиктограмм наклеек, в котором можно настраивать контрастность в зависимости от назначения его использования.</p>
+          <p>+ Для «плоского» складывания лучше использовать тонкую, прочную бумагу (80-90мг).</p>
           <img src="img/7.png" width="300">
+          <img src="img/6.png" width="500">
           <br>
-          <p>Наполнение</p>
+          <h3>Наполнение:</h3>
+          <p>— Расположил все наклейки на одной странице, это избавит от переворачивания инструкции при поиске нужной наклейки. + Это сэкономит на стоимости печати.</p>
+          <p>— Привел иконки к более-менее одному стилю (все равно не до конца)</p>
+          <p>— Выделил названия наклеек</p>
+          <p>— Увеличил максимальное количество символов для описания до 210.</p>
+          <p>— Хэштеги увеличил и расположил на одном уровне, это позволяет быстро найти точное значение наклейки, чтобы каждый раз не читать текст с описанием. + Добавил пробелы между словами, для улучшения читабельности.</p>
+          <p>— Преобладание белого подчеркивает цвета наклеек. + Общий вид стал чище.</p>
           <img src="img/9.png" width="1000">
         </section>
 
