--- a/sites/azbuka/index.html
+++ b/sites/azbuka/index.html
@@ -8,7 +8,19 @@
   <body>
     <article>
 
+
+      <div class="nav">
+        <p><a href="#logo">Логотип</a></p>
+        <p><a href="#site">Сайт</a></p>
+        <p><a href="#gruzer">Gruzer</a></p>
+        <div class="arrows">
+          <p><a href="#top">↑</a></p>
+          <p><a href="#bottom">↓</a></p>
+        </div>
+      </div>
+
         <br><br>
+        <div id="top"></div>
         <h2>Тестовое задание «Азбуки»</h2>
         <p class="subtitle">Разработка логотипа, концепции сайта и проработка инструкций для Gruzer</p>
         <p><strong>Задание: </strong> </p>
@@ -22,6 +34,7 @@
 
 
         <section>
+          <div id="logo"></div>
           <h2>Логотип</h2>
           <p>
             <ul>
@@ -35,6 +48,7 @@
 
 
         <section>
+          <div id="site"></div>
           <h2>Концепция сайта</h2>
           <hr>
           <h3>Первый вариант:</h3>
@@ -54,6 +68,7 @@
         </section>
 
         <section>
+          <div id="gruzer"></div>
           <h2>Инструкции «Gruzer»</h2>
           Логотип Gruzer не использовал
           <hr>
@@ -81,7 +96,8 @@
 
         <hr>
         <section>
-          <h3>Для уточнения информации обращайтесь по телефону <a href="tel:+7 921 869 32 30">+7 921 869 32 30</a></h3>
+          <div id="bottom"></div>
+          <h3>Для уточнения информации обращайтесь по телефону <a href="tel:+7 921 869 32 30"><nobr>+7 921 869-32-30</nobr></a></h3>
           <h3>Адрес электронной почты: <a href="mailto:paperdavid@gmail.com">paperdavid@gmail.com</a></h3>
         </section>
 
