--- a/sites/azbuka/index.html
+++ b/sites/azbuka/index.html
@@ -11,7 +11,7 @@
 
       <div class="nav">
         <p><a href="#logo">Логотип</a></p>
-        <p><a href="#site">Сайт</a></p>
+        <p><a href="#site">Сайт</a> <a href="#1">1</a>, <a href="#2">2</a>, <a href="#3">3</a>, <a href="#4">4</a></p>
         <p><a href="#gruzer">Gruzer</a></p>
         <div class="arrows">
           <p><a href="#top">↑</a></p>
@@ -36,14 +36,10 @@
         <section>
           <div id="logo"></div>
           <h2>Логотип</h2>
-          <p>
-            <ul>
-              <li>Разработка логотипа</li>
-              <li>Использование логотипа</li>
-              <li>Запрещенное использование логотипа</li>
-              <li>Охранное поле логотипа</li>
-            </ul>
-          </p>
+          <p>Выбрал два направления: geometric и serif. Оба используют текстовую часть без знака, его отстутствие обусловлено тем, что «продвигать» знак не имеет смысла. Текст лёгок в прочтении и гибок к изменению цвета.</p>
+          <img src="img/10.png" width="700">
+          <img src="img/11.png" width="1000">
+          <img src="img/12.png" width="1000">
         </section>
 
 
@@ -51,18 +47,28 @@
           <div id="site"></div>
           <h2>Концепция сайта</h2>
           <hr>
+          <br>
+          <div id="1"></div>
           <h3>Первый вариант:</h3>
           <p>Главная страница</p>
           <img src="img/1.png" width="1000">
           <p>Страница проекта</p>
           <img src="img/2.png" width="1000">
 
+          <div id="2"></div>
           <h3>Второй вариант:</h3>
+          <p>Концепция в тенденции. Сайт отвечает последним веяниям моды сайтостроения (минус в том, что тенденции меняются, и сайт нужно чаще обновлять). Весь принцип основывается на анимациях, которые создают движение на странице и придают современный вид.</p>
+          <p>Зеленый фон — анимация (видео, графика или фон, быстро и плавно изменяющий цвет)</p>
+          <p>Меню — выплывающее сверху/справа</p>
           <img src="img/3.png" width="1000">
-
+  
+          <div id="3"></div>
           <h3>Третий вариант:</h3>
+          <p>В этом примере преобладает акцент на контенте. Каждое слово и изображение получают бо́льшее внимание.</p>
+          <p>Узкое строение сайта позволяет вести за собой «глаз» пользователя и преподносить информацию в нужном ракурсе.</p>
           <img src="img/4.png" width="1000">
 
+          <div id="4"></div>
           <h3>Четвертый вариант:</h3>
           <img src="img/5.png" width="1000">
         </section>
