--- a/sites/art/index.html
+++ b/sites/art/index.html
@@ -81,7 +81,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="/">
+					<a class="navbar-brand" href="">
 						Art re.Flex Gallery
 					</a>
 				</div>
@@ -115,7 +115,7 @@
         <div class="container">
     <div class="loop owl-carousel">
     <div class="item">
-      <img src="../../img/images/carousel/5.jpeg" alt="">
+      <img src="img/images/" alt="">
     </div>
     <div class="item">
       <img src="../../img/images/carousel/1.jpeg" alt="">
