--- a/sites/art/index.html
+++ b/sites/art/index.html
@@ -115,19 +115,19 @@
         <div class="container">
     <div class="loop owl-carousel">
     <div class="item">
-      <img src="img/images/" alt="">
+      <img src="img/images/carousel/5.jpeg" alt="">
     </div>
     <div class="item">
-      <img src="../../img/images/carousel/1.jpeg" alt="">
+      <img src="img/images/carousel/1.jpeg" alt="">
     </div>
     <div class="item">
-      <img src="../../img/images/carousel/2.jpeg" alt="">
+      <img src="img/images/carousel/2.jpeg" alt="">
     </div>
     <div class="item">
-      <img src="../../img/images/carousel/3.jpeg" alt="">
+      <img src="img/images/carousel/3.jpeg" alt="">
     </div>
     <div class="item">
-      <img src="../../img/images/carousel/4.jpeg" alt="">
+      <img src="img/images/carousel/4.jpeg" alt="">
     </div>
   </div><!-- /carousel -->
 </div>
