--- a/sites/art/index.html
+++ b/sites/art/index.html
@@ -2,7 +2,7 @@
 <html lang="ru" class="no-js" prefix="og: http://ogp.me/ns#">
 
     <head>
-    <title>Art re.Flex Gallery</title>
+    <title>ART re.FLEX Gallery</title>
 
     <!-- Main Meta information-->
     <meta charset="utf-8">
