--- a/sites/art/index.html
+++ b/sites/art/index.html
@@ -82,7 +82,7 @@
 						<span class="icon-bar"></span>
 					</button>
 					<a class="navbar-brand" href="">
-						Art re.Flex Gallery
+						ART re.FLEX Gallery
 					</a>
 				</div>
 				</div>
@@ -217,7 +217,7 @@
 		<div class="row">
 			<div class="col-xs-12 col-sm-3">
 				<p>&copy;&nbsp;2016</p>
-				<p>Art re.Flex Gallery</p>
+				<p>ART re.FLEX Gallery</p>
 				<br>
 				<div itemscope itemtype="http://schema.org/Organization">
 					<div class="footer__item--address__info" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
