--- a/sites/art/index.html
+++ b/sites/art/index.html
@@ -2,7 +2,7 @@
 <html lang="ru" class="no-js" prefix="og: http://ogp.me/ns#">
 
     <head>
-    <title>ART re.FLEX Gallery</title>
+    <title>Art re.Flex Gallery</title>
 
     <!-- Main Meta information-->
     <meta charset="utf-8">
@@ -73,7 +73,7 @@
 		<div class="container">
 			<!-- Brand and toggle get grouped for better mobile display -->
 			<div class="row">
-				<div class="col-xs-12 col-sm-2 col-md-3">
+				<div class="col-xs-12 col-sm-2 col-md-6">
 					<div class="navbar-header">
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
 						<span class="sr-only">Toggle navigation</span>
@@ -81,14 +81,14 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="">
+					<a class="navbar-brand" href="/">
 						ART re.FLEX Gallery
 					</a>
 				</div>
 				</div>
 
-				<div class="col-xs-12 col-sm-10 col-md-9">
-					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<div class="col-xs-12 col-sm-10 col-md-6">
+					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1 ">
 
 						<ul class="nav navbar-nav">
 							<li><a href=""><span>Художники</span></a></li>
@@ -98,7 +98,7 @@
 							<li><a href=""><span>Галерея</span></a></li>
 						</ul>
 
-						<ul class="nav navbar-nav navbar-right">
+						<ul class="nav navbar-nav navbar-right language">
 							<li class="active"><a href="#"><span>Ru</span></a></li>
 							<li><a href="#"><span>En</span></a></li>
 						</ul>
@@ -115,22 +115,40 @@
         <div class="container">
     <div class="loop owl-carousel">
     <div class="item">
-      <img src="img/images/carousel/5.jpeg" alt="">
+      <img src="../../img/images/carousel/5.jpeg" alt="">
     </div>
     <div class="item">
-      <img src="img/images/carousel/1.jpeg" alt="">
+      <img src="../../img/images/carousel/1.jpeg" alt="">
     </div>
     <div class="item">
-      <img src="img/images/carousel/2.jpeg" alt="">
+      <img src="../../img/images/carousel/2.jpeg" alt="">
     </div>
     <div class="item">
-      <img src="img/images/carousel/3.jpeg" alt="">
+      <img src="../../img/images/carousel/3.jpeg" alt="">
     </div>
-    <div class="item">
-      <img src="img/images/carousel/4.jpeg" alt="">
-    </div>
-  </div><!-- /carousel -->
+  </div>
 </div>
+
+<!-- <div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+
+      <div class="chocolat-parent" data-chocolat-title="set title">
+        <a class="chocolat-image" href="../../img/images/carousel/5.jpeg" title="caption image 1">
+            <img width="100" src="../../img/images/carousel/5.jpeg" />
+        </a>
+        <a class="chocolat-image" href="../../img/images/carousel/1.jpeg" title="caption image 2">
+            <img width="100" src="../../img/images/carousel/1.jpeg" />
+        </a>
+        <a class="chocolat-image" href="../../img/images/carousel/2.jpeg" title="caption image 3">
+            <img width="100" src="../../img/images/carousel/2.jpeg"/>
+        </a>
+      </div>
+
+    </div>
+  </div>
+</div> -->
+
 
 <div class="container inner">
   <div class="row">
@@ -183,7 +201,6 @@
       <ul class="list__pure">
         <li><a href="">Татьяна Кроль</a></li>
         <li><a href="">Юрий Штапаков</a></li>
-        <li><a class="link" href="">Художники →</a></li>
       </ul>
     </div>
 
@@ -195,7 +212,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-sm-offset-1 text-center">
-      <h4>To receive emails about our news updates, exhibitions, and more, sign up for our mailing list.</h4>
+      <h4>Подпишитесь на нашу рассылку, чтобы получать анонсы выставок и ярмарок</h4>
       <form class="form-inline margin">
         <div class="form-group">
           <input type="email" class="form-control" id="exampleInputEmail2" placeholder="jane@example.com">
@@ -215,10 +232,15 @@
         <footer>
 	<div class="container inner">
 		<div class="row">
-			<div class="col-xs-12 col-sm-3">
+			<div class="col-xs-12 col-sm-4">
 				<p>&copy;&nbsp;2016</p>
-				<p>ART re.FLEX Gallery</p>
-				<br>
+				<p>Art re.Flex Gallery</p>
+			</div>
+
+			<div class="col-xs-12 col-sm-4">
+				<p><a class="link" href="">Задать вопрос</a></p>
+				<p itemprop="telephone"><a class="link" href="tel:+78123323343">(812)&nbsp;332-33-43</a></p>
+				<p><a class="link" href="mailto:info@artreflex.ru">info@artreflex.ru</a></p><br>
 				<div itemscope itemtype="http://schema.org/Organization">
 					<div class="footer__item--address__info" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
 						<p><nobr><span itemprop="streetAddress">проспект Бакунина, д.&nbsp;5</span></nobr>
@@ -226,19 +248,16 @@
 						<span itemprop="postalCode">191024</span></nobr></p>
 					</div>
 				</div>
-			</div>
-
-			<div class="col-xs-12 col-sm-3">
-				<p itemprop="telephone"><a class="link" href="tel:+78123323343">(812)&nbsp;332-33-43</a></p>
-				<p>Пишите: <a class="link" href="mailto:info@artreflex.ru">info@artreflex.ru</a></p>
 				<ul class="social-list">
 					<a href="http://vk.com/artreflex2"><li class="social social_vk"></li></a>
 					<a href="https://facebook.com/artreflexgallery/"><li class="social social_fb"></li></a>
-					<a href="https://instagram.com/artreflex"><li class="social social_tw"></li></a>
+					<a href="https://instagram.com/artreflex"><li class="social social_in"></li></a>
+					<a href="https://ru.pinterest.com/artreflex/art-reflex-gallery/"><li class="social social_pi"></li></a>
+					<a href="https://twitter.com/artreflexx"><li class="social social_tw"></li></a>
 				</ul>
 			</div><!-- /col -->
 
-			<div class="col-xs-12 col-sm-3 col-sm-offset-3 text-right">
+			<div class="col-xs-12 col-sm-4 text-right">
 				<p>Дизайн и разработка – <a class="link" target="_blank" href="">paperdavid</a></p>
 				
 			</div><!-- /col -->
