--- a/sites/art/index.html
+++ b/sites/art/index.html
@@ -140,9 +140,24 @@
           </ol>
         <!-- Carousel items -->
           <div class="carousel-inner">
-            <div class="active item"><img src="img/images/carousel/5.jpeg" alt=""></div>
-            <div class="item"><img src="img/images/carousel/1.jpeg" alt=""></div>
-            <div class="item"><img src="img/images/carousel/2.jpeg" alt=""></div>
+            <div class="active item">
+              <img src="img/images/carousel/5.jpeg" alt="">
+              <div class="carousel-caption">
+                <p>Подпись к фотокарточке</p>
+              </div>
+            </div>
+            <div class="item">
+              <img src="img/images/carousel/1.jpeg" alt="">
+              <div class="carousel-caption">
+                <p>Подпись к фотокарточке</p>
+              </div>
+            </div>
+            <div class="item">
+              <img src="img/images/carousel/2.jpeg" alt="">
+              <div class="carousel-caption">
+                <p>Подпись к фотокарточке</p>
+              </div>
+            </div>
           </div>
         <!-- Carousel nav -->
           <a class="carousel-control left" href="#carousel" data-slide="prev"><span class="arrow-left">&lsaquo;</span></a>
@@ -157,20 +172,19 @@
 	<div class="container inner">
 		<div class="row">
 			<div class="col-xs-12 col-sm-4">
-				<p>&copy;&nbsp;2016 Art re.Flex Gallery</p><br>
-				<p itemprop="telephone"><a class="link" href="tel:+78123323343">(812)&nbsp;332-33-43</a></p>
-				<p><a class="link" href="mailto:info@artreflex.ru">info@artreflex.ru</a></p><br>
+				<p>ART re.FLEX Gallery</p><br>
 				<div itemscope itemtype="http://schema.org/Organization">
 					<div class="footer__item--address__info" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-						<p><nobr><span itemprop="streetAddress">проспект Бакунина, д.&nbsp;5</span></nobr>
-						<nobr><span itemprop="addressLocality">Санкт-Петербург, Россия,</span>
-						<span itemprop="postalCode">191024</span></nobr></p>
+						<p><nobr><span itemprop="streetAddress">проспект Бакунина, д.&nbsp;5</span></nobr><br>
+						<nobr><span itemprop="addressLocality">Санкт-Петербург</span></nobr><br>
+						<nobr>Россия,<span itemprop="postalCode">191024</nobr></span></p>
 					</div>
 				</div>
-				
+				<p itemprop="telephone"><a class="link" href="tel:+78123323343">(812)&nbsp;332-33-43</a></p>
+				<p><a class="link" href="mailto:info@artreflex.ru">info@artreflex.ru</a></p>
 			</div><!-- /col -->
 
-			<div class="col-xs-12 col-sm-4">
+			<div class="col-xs-12 col-sm-4 text-center">
 
 				<p>Подпишитесь на нашу рассылку, чтобы получать анонсы выставок и ярмарок:</p>
 				<form class="form-inline margin">
@@ -192,6 +206,10 @@
 				</ul>
 				
 			</div><!-- /col -->
+
+			<div class="col-xs-12 inner__top">
+				<p class="small">© 2016 ART re.FLEX Gallery</p>
+			</div>
 
 
 		</div><!-- /row -->
