--- a/sites/art/index.html
+++ b/sites/art/index.html
@@ -169,51 +169,51 @@
         </main>
 
         <footer>
-	<div class="container inner">
-		<div class="row">
-			<div class="col-xs-12 col-sm-4">
-				<p>ART re.FLEX Gallery</p><br>
-				<div itemscope itemtype="http://schema.org/Organization">
-					<div class="footer__item--address__info" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-						<p><nobr><span itemprop="streetAddress">проспект Бакунина, д.&nbsp;5</span></nobr><br>
-						<nobr><span itemprop="addressLocality">Санкт-Петербург</span></nobr><br>
-						<nobr>Россия,<span itemprop="postalCode">191024</nobr></span></p>
-					</div>
-				</div>
-				<p itemprop="telephone"><a class="link" href="tel:+78123323343">(812)&nbsp;332-33-43</a></p>
-				<p><a class="link" href="mailto:info@artreflex.ru">info@artreflex.ru</a></p>
-			</div><!-- /col -->
+  <div class="container inner">
+    <div class="row">
+      <div class="col-xs-12 col-sm-4">
+        <p>Контактная информация</p>
+        <div itemscope itemtype="http://schema.org/Organization">
+          <div class="footer__item--address__info" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+            <p><nobr><span itemprop="streetAddress">проспект Бакунина, д.&nbsp;5</span></nobr><br>
+            <nobr><span itemprop="addressLocality">Санкт-Петербург</span></nobr><br>
+            <nobr>Россия,<span itemprop="postalCode">191024</nobr></span></p>
+          </div>
+        </div>
+        <p itemprop="telephone"><a class="link" href="tel:+78123323343">+7 (812)&nbsp;332-33-43</a> <br>
+        <a class="link" href="mailto:info@artreflex.ru">info@artreflex.ru</a></p>
+      </div><!-- /col -->
 
-			<div class="col-xs-12 col-sm-4 text-center">
+      <div class="col-xs-12 col-sm-4 text-center">
 
-				<p>Подпишитесь на нашу рассылку, чтобы получать анонсы выставок и ярмарок:</p>
-				<form class="form-inline margin">
-	        <div class="form-group">
-	          <input type="email" class="form-control" id="exampleInputEmail2" placeholder="jane@example.com">
-	        </div>
-	        <div class="buttonboxback"><a href="" type="submit">Подписаться</a></div>
-	      </form>
+        <p>Подпишитесь на нашу рассылку, чтобы получать анонсы выставок и ярмарок:</p>
+        <form class="form-inline margin">
+          <div class="form-group">
+            <input type="email" class="form-control" id="exampleInputEmail2" placeholder="jane@example.com">
+          </div>
+          <div class="buttonboxback"><a href="" type="submit">Подписаться</a></div>
+        </form>
 
-			</div>
+      </div>
 
-			<div class="col-xs-12 col-sm-4 text-right">
-				<ul class="social-list">
-					<a href="http://vk.com/artreflex2"><li class="social social_vk"></li></a>
-					<a href="https://facebook.com/artreflexgallery/"><li class="social social_fb"></li></a>
-					<a href="https://instagram.com/artreflex"><li class="social social_in"></li></a>
-					<a href="https://ru.pinterest.com/artreflex/art-reflex-gallery/"><li class="social social_pi"></li></a>
-					<a href="https://twitter.com/artreflexx"><li class="social social_tw"></li></a>
-				</ul>
-				
-			</div><!-- /col -->
+      <div class="col-xs-12 col-sm-4 text-right">
+        <ul class="social-list">
+          <a href="http://vk.com/artreflex2"><li class="social social_vk"></li></a>
+          <a href="https://facebook.com/artreflexgallery/"><li class="social social_fb"></li></a>
+          <a href="https://instagram.com/artreflex"><li class="social social_in"></li></a>
+          <a href="https://ru.pinterest.com/artreflex/art-reflex-gallery/"><li class="social social_pi"></li></a>
+          <a href="https://twitter.com/artreflexx"><li class="social social_tw"></li></a>
+        </ul>
+        
+      </div><!-- /col -->
 
-			<div class="col-xs-12 inner__top">
-				<p class="small">© 2016 ART re.FLEX Gallery</p>
-			</div>
+      <div class="col-xs-12 inner__top">
+        <p class="small">© 2016 ART re.FLEX Gallery</p>
+      </div>
 
 
-		</div><!-- /row -->
-	</div><!-- /container -->
+    </div><!-- /row -->
+  </div><!-- /container -->
 </footer><!-- /footer -->
 
 <!-- 
