--- a/sites/art/index.html
+++ b/sites/art/index.html
@@ -112,22 +112,6 @@
 </header><!-- /.header -->
 
         <main>
-        <!-- <div class="container">
-    <div class="loop owl-carousel">
-    <div class="item">
-      <img src="../../img/images/carousel/5.jpeg" alt="">
-    </div>
-    <div class="item">
-      <img src="../../img/images/carousel/1.jpeg" alt="">
-    </div>
-    <div class="item">
-      <img src="../../img/images/carousel/2.jpeg" alt="">
-    </div>
-    <div class="item">
-      <img src="../../img/images/carousel/3.jpeg" alt="">
-    </div>
-  </div>
-</div> -->
 
 <div class="container">
   <div class="row">
@@ -173,9 +157,8 @@
 		<div class="row">
 			<div class="col-xs-12 col-sm-4">
 				<p>Контактная информация <br>
-				<nobr><span itemprop="streetAddress">проспект Бакунина, д.&nbsp;5</span></nobr><br>
-				<nobr><span itemprop="addressLocality">Санкт-Петербург</span></nobr><br>
-				<nobr>Россия,<span itemprop="postalCode">191024</nobr></span><br>
+				<nobr><span>проспект Бакунина, д.&nbsp;5</span></nobr><br>
+				<nobr><span>Санкт-Петербург, 191024</span></nobr><br>
 				<a class="link" href="tel:+78123323343">+7 (812)&nbsp;332-33-43</a> <br>
 				<a class="link" href="mailto:info@artreflex.ru">info@artreflex.ru</a></p>
 			</div><!-- /col -->
@@ -203,9 +186,16 @@
 				
 			</div><!-- /col -->
 
-			<div class="col-xs-12 inner__top">
-				<p class="small">© 2016 ART re.FLEX Gallery</p>
+		<div class="col-sm-12 inner__top">
+			<div class="row">
+				<div class="col-xs-12 col-sm-6">
+					<p class="small">© 2016 ART re.FLEX Gallery</p>
+				</div>
+				<div class="col-xs-12 col-sm-6 text-right">
+					<p class="small">Дизайн и разработка — <a href="">paperdavid</a></p>
+				</div>
 			</div>
+		</div>
 
 
 		</div><!-- /row -->
